# pexplore

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: circle.yml~  config.yml
pexplore/: pexplore.py
pexplore/test_data/: custom.json  new_custom.json
pexplore/tests/: test_pexplore.py
