[metadata]
name = pexplore
author = b00wrm
author-email = b00wrk@example.com
license = GPL3
long_description = file: README.rst
url = http://www.example.com
requires-python = >=3.6
classifiers =
    Development Status :: 1 - Aplha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GPL3
    Operating Sytem :: OS Independent
    Programming Language :: Python